# n-body-sim-rust

./: .gitignore  Cargo.toml  render_output.sh
src/: main.rs  sim_core.rs  threads_test.rs
src/sim_core/: chunk.rs  dup_thr_pool.rs  point.rs  render.rs  verlet_object.rs  verlet_world.rs
