[package]
name = "nbodysim-rust"
version = "0.1.0"
authors = [
    "kugichka <kugi@kugi.club>",
]
edition = "2021"

[dependencies]
rand = "0.8.5"
pixels = "0.13.0"
winit = "0.28"
winit_input_helper = "0.14"
env_logger = "0.11.3"
log = "0.4.21"
error-iter = "0.4.1"
tiny-skia = "0.11"

[[bin]]
name = "nbodysim-rust"
path = "src/main.rs"
